Fix picklist not overlapping calendar #538

--- a/src/components/ids-date-picker/ids-date-picker.scss
+++ b/src/components/ids-date-picker/ids-date-picker.scss
@@ -214,6 +214,7 @@
     @include m-0();
     @include p-0();
     @include w-full();
+    @include z-2();
 
     border: none;
     top: 44px;
